--- a/src/main/resources/server.properties
+++ b/src/main/resources/server.properties
@@ -6,6 +6,7 @@ server.message.queue.size=1000
 server.thread.pool.size=50
 server.client.timeout=300000
 server.logging.enabled=true
+server.logging.level=INFO
 server.report.interval.minutes=1
 server.monitor.interval.seconds=5
 server.analytics.enabled=true
